--- a/client/suhu/suhu.html
+++ b/client/suhu/suhu.html
@@ -56,6 +56,21 @@
 	            <p class="mb-0 font-12 opacity-50">12:20</p>
 	          </div>
 	        </a>
+	        <a href="#" class="d-flex pb-3">
+	          <div class="align-self-center">
+	            <span class="icon rounded-s me-2 gradient-green shadow-bg shadow-bg-xs">
+	              <i class="bi bi-droplet font-18 color-white"></i>
+	            </span>
+	          </div>
+	          <div class="align-self-center ps-1">
+	            <h5 class="pt-1 mb-n1">Motion</h5>
+	            <p class="mb-0 font-11 opacity-50"> </p>
+	          </div>
+	          <div class="align-self-center ms-auto text-end">
+	            <h4 class="pt-1 mb-n1 color-green-dark">{{motion.motion}} C</h4>
+	            <p class="mb-0 font-12 opacity-50"> </p>
+	          </div>
+	        </a>
 	    </div>
     </div>
 </template>
