--- a/client/suhu/suhu.html
+++ b/client/suhu/suhu.html
@@ -8,7 +8,7 @@
             </a>
           </div>
           <div class="align-self-center me-auto">
-            <h1 class="color-theme mb-0 font-18">Sensors</h1>
+            <h1 class="color-theme mb-0 font-18">Prices</h1>
           </div>
           <div class="align-self-center ms-auto">
             <a href="#" data-bs-toggle="offcanvas" data-bs-target="#menu-sidebar" class="icon icon-xxs gradient-highlight color-white shadow-bg shadow-bg-xs rounded-s">
